<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>view</artifactId>

    <parent>
        <groupId>gr36</groupId>
        <artifactId>app-gruppe36</artifactId>
        <version>0.0.1-SNAPSHOT</version>
        <relativePath>..</relativePath>
    </parent>

    <dependencies>

        <dependency>
            <groupId>gr36</groupId>
            <artifactId>model</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>

        <!-- javafx -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>17.0.8</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>17.0.8</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>17.0.8</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>17.0.8</version>
        </dependency>


        <!-- test javafx with TextFX -->
		<dependency>
			<groupId>org.testfx</groupId>
			<artifactId>testfx-core</artifactId>
			<version>4.0.16-alpha</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testfx</groupId>
			<artifactId>testfx-junit5</artifactId>
			<version>4.0.16-alpha</version>
			<scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest</artifactId>
            <version>2.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>


    <profiles>
        <profile> <!-- headless profil for å kjøre pipeline!!-->
            <id>headless</id>
            <properties>
                <headlessTests>true</headlessTests>
            </properties>
            <dependencies>
                <!-- https://mvnrepository.com/artifact/org.testfx/openjfx-monocle -->
                <dependency>
                    <groupId>org.testfx</groupId>
                    <artifactId>openjfx-monocle</artifactId>
                    <version>jdk-12.0.1+2</version>
                    <scope>test</scope>
                </dependency>
            </dependencies>
        </profile>
    </profiles>


    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <mainClass>view.App</mainClass>
                    <compress>2</compress>
                    <noHeaderFiles>true</noHeaderFiles>
                    <stripDebug>true</stripDebug>
                    <noManPages>true</noManPages>
                    <launcher>ryddeplanen</launcher>
                    <jlinkImageName>ryddeplanen</jlinkImageName>
                    <jlinkZipName>ryddeplanen.zip</jlinkZipName>
                    <argLine>--add-modules javafx.controls,javafx.fxml,javafx.base,javafx.graphics</argLine>
                    <addModules>javafx.controls,javafx.fxml,javafx.base,javafx.graphics</addModules>
                </configuration>
            </plugin>

            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <configuration>
                    <propertyName>jaCoCoArgLine</propertyName>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <artifactSet>
                                <includes>
                                    <include>org.jsoup:jsoup</include>
                                    <include>org.openjfx:javafx-controls</include>
                                    <include>org.openjfx:javafx-fxml</include>
                                    <include>org.openjfx:javafx-base</include>
                                    <include>org.openjfx:javafx-graphics</include>
                                </includes>
                            </artifactSet>
                            <outputFile>${project.build.directory}/${project.artifactId}-${project.version}-all.jar</outputFile>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>module-info.class</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <manifestEntries>
                                <Main-Class>view.App</Main-Class>
                            </manifestEntries>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>default-jar</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/jar</outputDirectory>
                            <finalName>view</finalName>
                            <archive>
                                <manifestEntries>
                                    <Manifest-Version>1.0</Manifest-Version>
                                    <Main-Class>view.App</Main-Class>
                                    <Module-Name>view</Module-Name>
                                </manifestEntries>
                            </archive>
                        </configuration>
                    </execution>
                    <execution>
                        <id>shaded-jar</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/jar</outputDirectory>
                            <finalName>app-jar</finalName>
                            <classifier>shaded</classifier>
                            <archive>
                                <manifestEntries>
                                    <Main-Class>view.App</Main-Class>
                                </manifestEntries>
                            </archive>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- config above and below taken from https://dev.to/cherrychain/javafx-jlink-and-jpackage-h9 -->
            <plugin>
                <groupId>org.panteleyev</groupId>
                <artifactId>jpackage-maven-plugin</artifactId>
                <version>1.4.0</version>
                <configuration>
                    <name>Ryddeplanen</name>
                    <appVersion>1.0.0</appVersion>
                    <vendor>gr36</vendor>
                    <destination>target/dist</destination>
                    <module>classes.view</module>
                    <mainClass>view.App</mainClass>
                    <javaOptions>
                        <option>-Dfile.encoding=UTF-8</option>
                    </javaOptions>
                    <winDirChooser>true</winDirChooser>
                    <winShortcut>true</winShortcut>
                    <winMenu>true</winMenu>
                    <winMenuGroup>Ryddeplanen</winMenuGroup>
                    <modulePaths>
                        <modulePath>target/ryddeplanen</modulePath>
                    </modulePaths>
                </configuration>
            </plugin>
        </plugins>
    </build>
    
</project>
